--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "author": "Arno Schlipf",
   "license": "ISC",
   "scripts": {
-    "dev": "webpack-dev-server"
+    "dev": "webpack serve"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "babel-loader": "^8.0.6",
-    "prettier": "^1.19.1",
-    "webpack": "^5.0.0-beta.13",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "@babel/core": "^7.12.3",
+    "babel-loader": "^8.1.0",
+    "prettier": "^2.1.2",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "aglfn": "^1.0.2",
-    "paper": "^0.12.4"
+    "paper": "^0.12.11"
   }
 }
