--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .cache
 node_modules
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
