--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "aglfn": "^1.0.2",
     "paper": "^0.12.11"
