--- a/package.json
+++ b/package.json
@@ -11,16 +11,10 @@
     "dev": "webpack serve"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "babel-loader": "^8.1.0",
     "prettier": "^2.1.2",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "vite": "^2.1.2"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "aglfn": "^1.0.2",
     "paper": "^0.12.11"
   }
